## Process this file with automake to produce Makefile.in

## Created by Anjuta

#AM_CPPFLAGS = \
#	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" 

AM_CFLAGS =\
	 -Wall

bin_PROGRAMS = ezinstall

ezinstall_SOURCES = \
	main.c     \
	configure.c     \
	configure.h     \
	editconfig.c     \
	editconfig.h     \
	getinput.c     \
	getinput.h     \
	ioapi.c     \
	ioapi.h     \
	login.c     \
	login.h     \
	main.h     \
	md5.c     \
	md5.h     \
	mylocale.c     \
	mylocale.h     \
	mysql.c     \
	mysql.h     \
	myunzip.c     \
	myunzip.h     \
	session.c      \
	session.h      \
	socket.c     \
	socket.h     \
	test.c     \
	test.h     \
	untar.c    \
	untar.h    \
	unzip.c     \
	unzip.h     \
	utils.c     \
	utils.h     \
	xml.c     \
	xml.h     \
	conditions.h

ezinstall_LDFLAGS = 

ezinstall_LDADD = 

datadir = @datadir@
datarootdir= @datarootdir@
localedir = @localedir@
DEFS = -DMYLOCALEDIR=\"$(localedir)\" @DEFS@
