## Process this file with automake to produce Makefile.in

## Created by Anjuta

#AM_CPPFLAGS = \
#	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" 

AM_CFLAGS =\
	 -Wall

bin_PROGRAMS = ezinstall

ezinstall_SOURCES = \
	main.c     \
	configure.c     \
	configure.h     \
	editconfig.c     \
	editconfig.h     \
	getinput.c     \
	getinput.h     \
	ioapi.c     \
	ioapi.h     \
	login.c     \
	login.h     \
	main.h     \
	md5.c     \
	md5.h     \
	mylocale.c     \
	mylocale.h     \
	mysql.c     \
	mysql.h     \
	myunzip.c     \
	myunzip.h     \
	session.c      \
	session.h      \
        sevenzip.c     \
	precomp.h     \
	socket.c     \
	socket.h     \
	curl.c     \
	curl.h     \
	test.c     \
	test.h     \
	untar.c    \
	untar.h    \
	unzip.c     \
	unzip.h     \
	utils.c     \
	utils.h     \
	xml.c     \
	xml.h     \
	conditions.h     \
	7zip/7zAlloc.c     \
	7zip/7zArcIn.c     \
	7zip/7zBuf2.c     \
	7zip/7zBuf.c     \
	7zip/7zCrc.c     \
	7zip/7zCrcOpt.c     \
	7zip/7zDec.c     \
	7zip/7zFile.c     \
	7zip/7zStream.c     \
	7zip/Bcj2.c     \
	7zip/Bra86.c     \
	7zip/Bra.c     \
	7zip/BraIA64.c     \
	7zip/CpuArch.c     \
	7zip/Delta.c     \
	7zip/Lzma2Dec.c     \
	7zip/LzmaDec.c     \
	7zip/Ppmd7.c     \
	7zip/Ppmd7Dec.c

7zDec.$(OBJEXT) : CFLAGS += -D_7ZIP_PPMD_SUPPPORT

ezinstall_LDFLAGS = 

ezinstall_LDADD = 

datadir = @datadir@
datarootdir= @datarootdir@
localedir = @localedir@
DEFS = -DMYLOCALEDIR=\"$(localedir)\" @DEFS@
